--- a/themes/trafiklab-2024/assets/sass/_landing.scss
+++ b/themes/trafiklab-2024/assets/sass/_landing.scss
@@ -65,6 +65,7 @@ main.landing {
     .landing-demo-middle {
       position: relative;
       z-index: 1; // Common stacking index root for marker, stops, and metro lines
+      overflow: visible;
 
       .landing-demo-stop {
         position: absolute;
